--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "summerpassion/utils",
+    "name": "summerpassion/rocket-utils",
     "description": "useful tools for ThinkPhp6.x",
     "type": "library",
     "license": "MIT",
