--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "rocket\\": "src/"
+            "rocket_utils\\": "src/"
         }
     },
     "extra": {
